--- a/flida_auth_sdk_android/android/build.gradle
+++ b/flida_auth_sdk_android/android/build.gradle
@@ -40,7 +40,7 @@ android {
     }
 
     dependencies {
-        implementation 'com.github.flida-dev:android-sdk:0.0.1' // Placeholder version
+        implementation 'com.github.flida-dev:android-sdk:v1.0.1'
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
         testImplementation 'org.mockito:mockito-core:5.0.0'
     }
